--- a/public/error_pages/500page.html
+++ b/public/error_pages/500page.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/css/404style.css">
-    <title>Error 404</title>
+    <title>Error 500</title>
+    <link rel="stylesheet" href="public/css/style1.css">
 </head>
 <body>
-    <h1>Oooopss.. Look like the page you are looking for is not found!</h1>  
+    <h1>Something is wrong in the server!</h1>
 </body>
 </html>
