--- a/public/error_pages/500page.html
+++ b/public/error_pages/500page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 500</title>
-    <link rel="stylesheet" href="public/css/style1.css">
+    <link rel="stylesheet" href="/css/style1.css">
 </head>
 <body>
     <h1>Something is wrong in the server!</h1>
